Fixed down arrow and project title not showing consistently, added hover effects to technologies, animation for mobile screen

--- a/src/components/technologies/_TechnologiesCard.scss
+++ b/src/components/technologies/_TechnologiesCard.scss
@@ -21,6 +21,14 @@
       gap: 3rem;
       align-items: center;
       justify-content: center;
+
+      svg {
+        transition: $transition;
+        &:hover {
+          transform: translateY(-6px);
+          mix-blend-mode: hard-light;
+        }
+      }
     }
   }
 }
