--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -326,7 +326,7 @@ svg {
 
 @media (max-width: 540px) {
   .portfolio {
-    padding: 3rem 0.1rem;
+    padding: 3rem 0.3rem;
 
     &-container {
       font-size: $xxsm-font;
